# opencv-lab-of-corners

./: CMakeLists.txt  README.md  corner_detector.cpp  filters.cpp  lab_3.cpp
